feat: add section novidades, contato e footer

--- a/html-css-responsividade-mobile-first/index.html
+++ b/html-css-responsividade-mobile-first/index.html
@@ -128,6 +128,46 @@
   </div>
 
 </section>
+<section class="recentes">
+  <h2 class="recentes__titulo">
+    TÓPICOS VISITADOS RECENTEMENTE
+  </h2>
+  <ul class="recentes__lista">
+    <li class="recentes__item">
+      <a href="#" class="recentes__link">Android</a>
+    </li>
+    <li class="recentes__item">
+      <a href="#" class="recentes__link">Marketing Digital</a>
+    </li>
+    <li class="recentes__item">
+      <a href="#" class="recentes__link">Agile</a>
+    </li>
+    <li class="recentes__item">
+      <a href="#" class="recentes__link">Startups</a>
+    </li>
+    <li class="recentes__item">
+      <a href="#" class="recentes__link">HTML & CSS</a>
+    </li>
+    <li class="recentes__item">
+      <a href="#" class="recentes__link">Python</a>
+    </li>
+    <li class="recentes__item">
+      <a href="#" class="recentes__link">OO</a>
+    </li>
+    <li class="recentes__item">
+      <a href="#" class="recentes__link">Java</a>
+    </li>
+  </ul>
+</section>
+<section class="novidades">
+  <h2 class="novidades__titulo">Fique por dentro das novidades!</h2>
+  <p class="novidades__texto">Atualizações de e-books, novos livros, promoções e outros.</p>
+  <input type="text" class="novidades__email" placeholder="Cadastre seu e-mail">
+</section>
+<footer class="rodapé">
+  <hr>
+  <h2 class="rodapé__titulo">Grupo Alura</h2>
+</footer>
 
 <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 <script>
