feat: finish layout 1024px

--- a/alurabooks/index.html
+++ b/alurabooks/index.html
@@ -195,8 +195,8 @@
   </div>
   <input type="text" class="novidades__email" placeholder="Cadastre seu e-mail">
 </section>
+<hr>
 <footer class="rodapé">
-  <hr>
   <h2 class="rodapé__titulo">Grupo Alura</h2>
   <ul class="rodapé__lista">
     <li class="rodapé__lista-titulo">Educação</li>
@@ -212,15 +212,66 @@
   <ul class="rodapé__lista">
     <li class="rodapé__lista-titulo">Educação Online</li>
     <li class="rodapé__item">
-      <img src="./images/icons/Caelum.svg" alt="">
-      <a href="#" class="rodapé__link"></a>
+      <img src="./images/icons/Alura.svg" alt="Logo da Alura">
+      <a href="#" class="rodapé__link">Alura</a>
+    </li>
+    <li class="rodapé__item">
+      <img src="./images/icons/Alura.svg" alt="Logo da Alura para Empresas">
+      <a href="#" class="rodapé__link">Alura para Empresas</a>
+    </li>
+    <li class="rodapé__item">
+      <img src="./images/icons/AluraLatam.svg" alt="Logo da Alura LATAM">
+      <a href="#" class="rodapé__link">Alura LATAM</a>
+    </li>
+    <li class="rodapé__item">
+      <img src="./images/icons/AluraStart.svg" alt="Logo da Alura Start">
+      <a href="#" class="rodapé__link">Alura Start</a>
+    </li>
+
+    <li class="rodapé__item">
+      <img src="./images/icons/MusicDot.svg" alt="Logo da MusicDot">
+      <a href="#" class="rodapé__link">MusicDot</a>
+    </li>
+
+    <li class="rodapé__item">
+      <img src="./images/icons/AluraLingua.svg" alt="Logo da Alura">
+      <a href="#" class="rodapé__link">Alura Língua</a>
+    </li>
+
+    <li class="rodapé__item">
+      <img src="./images/icons/PM3.svg" alt="Logo da PM3">
+      <a href="#" class="rodapé__link">PM3</a>
     </li>
   </ul>
   <ul class="rodapé__lista">
     <li class="rodapé__lista-titulo">Comunidade</li>
     <li class="rodapé__item">
-      <img src="./images/icons/Caelum.svg" alt="">
-      <a href="#" class="rodapé__link"></a>
+      <img src="./images/icons/Caelum.svg" alt="Hipsters ponto Tech">
+      <a href="#" class="rodapé__link">Hipsters ponto Tech</a>
+    </li>
+    <li class="rodapé__item">
+      <img src="./images/icons/Alura.svg" alt="Logo da Scuba Dev">
+      <a href="#" class="rodapé__link">Scuba Dev</a>
+    </li>
+    <li class="rodapé__item">
+      <img src="./images/icons/Alura.svg" alt="Layers ponto Tech">
+      <a href="#" class="rodapé__link">Layers ponto Tech</a>
+    </li>
+    <li class="rodapé__item">
+      <img src="./images/icons/Alura.svg" alt="Like a Boss">
+      <a href="#" class="rodapé__link">Like a Boss</a>
+    </li>
+    <li class="rodapé__item">
+      <img src="./images/icons/Alura.svg" alt="Carreira sem Fronteira">
+      <a href="#" class="rodapé__link">Carreira sem Fronteira</a>
+    </li>
+    <li class="rodapé__item">
+      <img src="./images/icons/Alura.svg" alt="Hipsters ponto Jobs">
+      <a href="#" class="rodapé__link">Hipsters ponto Jobs</a>
+    </li>
+    <li class="rodapé__item">
+      <img src="./images/icons/Alura.svg" alt="Logo da GUJ">
+      <a href="#" class="rodapé__link">GUJ</a>
     </li>
   </ul>
 </footer>
