--- a/alurabooks/index.html
+++ b/alurabooks/index.html
@@ -13,7 +13,7 @@
 <header class="cabeçalho">
   <div class="container">
     <input type="checkbox" id="menu" class="container__botao">
-    <label for="menu">
+    <label for="menu" class="container__rotulo">
       <span class="cabeçalho__menu-hamburguer container__imagem"></span>
     </label>
     <ul class="lista-menu">
@@ -40,8 +40,8 @@
 
   <ul class="opções">
     <input type="checkbox" id="opções-menu" class="opções__botao">
-    <label for="opções-menu">
-      <li class="opções__item">Categorias</li>
+    <label for="opções-menu" class="opções__rotulo">
+      <li class="opções__item menu-ativo">Categorias</li>
     </label>
     <ul class="lista-menu">
       <li class="lista-menu__item">
@@ -64,9 +64,17 @@
     <li class="opções__item"><a href="#" class="opções__link">Minha estante</a></li>
   </ul>
   <div class="container">
-    <a href=""><img src="images/Favoritos.svg" alt="Meus favoritos" class="container__imagem container__imagem-transparente"></a>
-    <a href=""><img src="images/Compras.svg" alt="Carrinho de compras" class="container__imagem"></a>
-    <a href=""><img src="images/Usuario.svg" alt="Meu perfil" class="container__imagem"></a>
+    <a href="#">
+      <img src="images/Favoritos.svg" alt="Meus favoritos" class="container__imagem container__imagem-transparente">
+    </a>
+    <a href="#" class="container__link">
+      <img src="images/Compras.svg" alt="Carrinho de compras" class="container__imagem">
+      <p class="container__texto">Minha sacola</p>
+    </a>
+    <a href="#" class="container__link">
+      <img src="images/Usuario.svg" alt="Meu perfil" class="container__imagem">
+      <p class="container__texto">Meu perfil</p>
+    </a>
   </div>
 </header>
 <section class="banner">
@@ -77,85 +85,88 @@
 <section class="carousel">
   <h2 class="carrossel__titulo">Últimos lançamentos</h2>
 
-  <!-- Slider main container -->
-  <div class="swiper">
-    <!-- If we need pagination -->
-    <div class="swiper-pagination"></div>
+  <div class="carousel__container">
+    <!-- Slider main container -->
+    <div class="swiper">
+      <!-- If we need pagination -->
+      <div class="swiper-pagination"></div>
 
-    <!-- Additional required wrapper -->
-    <div class="swiper-wrapper">
-      <!-- Slides -->
-      <div class="swiper-slide"><img src="images/Gestão.svg" alt="Livro sobre Gestão"></div>
-      <div class="swiper-slide"><img src="images/Lideranca.svg" alt="Livro sobre Liderança"></div>
-      <div class="swiper-slide"><img src="images/MEAN.svg" alt="Livro sobre MEAN"></div>
-      <div class="swiper-slide"><img src="images/Nodejs.svg" alt="Livro sobre Nodejs"></div>
-      <div class="swiper-slide"><img src="images/Portugol.svg" alt="Livro sobre lógica com Portugol"></div>
-    </div>
-
-    <!-- If we need navigation buttons -->
-    <div class="swiper-button-prev"></div>
-    <div class="swiper-button-next"></div>
-  </div>
-
-  <div class="card">
-    <div class="card_descrição">
-      <div class="descrição">
-        <h3 class="descrição__titulo">Talvez você também se interesse por...</h3>
-        <h2 class="descrição__titulo-livro">Angular 11 e Firebase</h2>
-        <p class="descrição__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+      <!-- Additional required wrapper -->
+      <div class="swiper-wrapper">
+        <!-- Slides -->
+        <div class="swiper-slide"><img src="images/Gestão.svg" alt="Livro sobre Gestão"></div>
+        <div class="swiper-slide"><img src="images/Lideranca.svg" alt="Livro sobre Liderança"></div>
+        <div class="swiper-slide"><img src="images/MEAN.svg" alt="Livro sobre MEAN"></div>
+        <div class="swiper-slide"><img src="images/Nodejs.svg" alt="Livro sobre Nodejs"></div>
+        <div class="swiper-slide"><img src="images/Portugol.svg" alt="Livro sobre lógica com Portugol"></div>
       </div>
-      <img src="images/Angular.svg" alt="Logo do Framework Angular" class="descrição__imagem">
+
+      <!-- If we need navigation buttons -->
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
     </div>
 
-    <div class="card__botões">
-      <ul class="botões">
-        <li class="botões__item"><img src="images/Favoritos.svg" alt="Favoritos"></li>
-        <li class="botões__item"><img src="images/Compras.svg" alt="Carrinho de Compras"></li>
-      </ul>
-      <a href="#" class="botões__link">Saiba mais</a>
+    <div class="card">
+      <div class="card_descrição">
+        <div class="descrição">
+          <h3 class="descrição__titulo">Talvez você também se interesse por...</h3>
+          <h2 class="descrição__titulo-livro">Angular 11 e Firebase</h2>
+          <p class="descrição__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+        </div>
+        <img src="images/Angular.svg" alt="Logo do Framework Angular" class="descrição__imagem">
+      </div>
+
+      <div class="card__botões">
+        <ul class="botões">
+          <li class="botões__item"><img src="images/Favoritos.svg" alt="Favoritos"></li>
+          <li class="botões__item"><img src="images/Compras.svg" alt="Carrinho de Compras"></li>
+        </ul>
+        <a href="#" class="botões__link">Saiba mais</a>
+      </div>
     </div>
   </div>
 </section>
 <section class="carousel">
   <h2 class="carrossel__titulo">Mais vendidos</h2>
-  <div class="swiper">
-    <!-- If we need pagination -->
-    <div class="swiper-pagination"></div>
+  <div class="carousel__container">
+    <div class="swiper">
+      <!-- If we need pagination -->
+      <div class="swiper-pagination"></div>
 
-    <!-- Additional required wrapper -->
-    <div class="swiper-wrapper">
-      <!-- Slides -->
-      <div class="swiper-slide"><img src="images/Lideranca.svg" alt="Livro sobre Liderança"></div>
-      <div class="swiper-slide"><img src="images/Javascript.svg" alt="Livro sobre Javascript Assertivo"></div>
-      <div class="swiper-slide"><img src="images/ApacheKafka.svg" alt="Livro sobre Apache Kafka"></div>
-      <div class="swiper-slide"><img src="images/Nodejs.svg" alt="Livro sobre Nodejs"></div>
-    </div>
-
-    <!-- If we need navigation buttons -->
-    <div class="swiper-button-prev"></div>
-    <div class="swiper-button-next"></div>
-  </div>
-
-  <div class="card">
-    <div class="card_descrição">
-      <div class="descrição">
-        <img src="images/Estrelinhas.svg" alt="Avaliação 5 estrelas" class="descrição__avaliação">
-        <h3 class="descrição__titulo">Autora do Mês</h3>
-        <h2 class="descrição__titulo-livro">Juliana Agarikov</h2>
-        <p class="descrição__texto">Analista de sistemas e escritora, Juliana é especialista em Front-End. </p>
+      <!-- Additional required wrapper -->
+      <div class="swiper-wrapper">
+        <!-- Slides -->
+        <div class="swiper-slide"><img src="images/Lideranca.svg" alt="Livro sobre Liderança"></div>
+        <div class="swiper-slide"><img src="images/Javascript.svg" alt="Livro sobre Javascript Assertivo"></div>
+        <div class="swiper-slide"><img src="images/ApacheKafka.svg" alt="Livro sobre Apache Kafka"></div>
+        <div class="swiper-slide"><img src="images/Nodejs.svg" alt="Livro sobre Nodejs"></div>
       </div>
-      <img src="images/Escritora.png" alt="Foto da escritora do mês" class="descrição__imagem">
+
+      <!-- If we need navigation buttons -->
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
     </div>
 
-    <div class="card__botões">
-      <ul class="botões">
-        <li class="botões__item"><img src="images/Favoritos.svg" alt="Favoritos"></li>
-        <li class="botões__item"><img src="images/Compras.svg" alt="Carrinho de Compras"></li>
-      </ul>
-      <a href="#" class="botões__link">Saiba mais</a>
+    <div class="card">
+      <div class="card_descrição">
+        <div class="descrição">
+          <img src="images/Estrelinhas.svg" alt="Avaliação 5 estrelas" class="descrição__avaliação">
+          <h3 class="descrição__titulo">Autora do Mês</h3>
+          <h2 class="descrição__titulo-livro">Juliana Agarikov</h2>
+          <p class="descrição__texto">Analista de sistemas e escritora, Juliana é especialista em Front-End. </p>
+        </div>
+        <img src="images/Escritora.png" alt="Foto da escritora do mês" class="descrição__imagem">
+      </div>
+
+      <div class="card__botões">
+        <ul class="botões">
+          <li class="botões__item"><img src="images/Favoritos.svg" alt="Favoritos"></li>
+          <li class="botões__item"><img src="images/Compras.svg" alt="Carrinho de Compras"></li>
+        </ul>
+        <a href="#" class="botões__link">Saiba mais</a>
+      </div>
     </div>
   </div>
-
 </section>
 <section class="recentes">
   <h2 class="recentes__titulo">
