--- a/projeto-grid/index.html
+++ b/projeto-grid/index.html
@@ -364,7 +364,7 @@
             </div>
         </section>
     </main>
-    <footer class="rodape">Rodape</footer>
+    <footer class="rodape">Todos os direitos reservados &copy;</footer>
     <script src="./assets/js/fontawesome.all.min.js"></script>
 </body>
 </html>
