--- a/seven-days-of-code/public/index.html
+++ b/seven-days-of-code/public/index.html
@@ -10,7 +10,10 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <title>React App</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <title>7 Days of Code</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
